fix z-index, fix eventListener removal on component destroy

--- a/src/app/components/section-services/section-services.component.scss
+++ b/src/app/components/section-services/section-services.component.scss
@@ -62,7 +62,7 @@
       bottom: 0;
       background:rgba(white, 0);
       transition: 0.2s ease all;
-      z-index: 100;
+      z-index: 95;
     }
 
     &.transitioning {
